# api-test-util

./: .gitignore  MANIFEST.md  PACKAGE-FILES-SHA256.txt  README.md  RESEARCH-AND-DESIGN-DECISIONS.md  SECURITY.md  START-HERE-CURSOR.md  package-lock.json  package.json  pyproject.toml
archive/: README.md
config/: local.secrets.env.example  project.example.toml
docs/: ARCHITECTURE.md  CURSOR-MASTER-PROMPT.md  EXECUTION-PLAYBOOK.md  EXISTING-REPO-SAFETY.md  HAR-CAPTURE-INSTRUCTIONS.md  OPERATING-MODEL.md  PARSER-EXTENSION-GUIDE.md  REPOSITORY-GUIDE.md  REQUIREMENTS-TRACEABILITY.md  ROLE-AND-GATE-MATRIX.md  UNITE-MSC-STARTER-CONFIG.md  VALIDATION-EVIDENCE.md
fixtures/: README.md  partial-qc4.postman_environment.json  partial.postman_collection.json  project.fixture.toml  qc4-sanitized.har
fixtures/legacy-api-tests/src/test/java/example/: PlansRequestTest.java
fixtures/service-source/src/main/java/example/: PlansController.java
fixtures/target-framework/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  initialize.ps1  initialize.sh  run_all.ps1  run_all.sh  run_newman_safe.py  validate_distribution.py  validate_fixture.ps1  validate_fixture.sh
src/api_evidence_mapper/: cli.py  config.py  discovery.py  generate.py  models.py  normalize.py  pipeline.py  reconcile.py  sanitize.py
templates/: endpoint_mapping_template.xlsx  endpoint_overrides.csv  manual_test_data.csv
tests/: test_normalize.py  test_pipeline.py  test_safety_and_extensions.py
tools/: validate_collection.js
