[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-evidence-mapper"
version = "0.1.0"
description = "Local-first API evidence reconciliation and Postman collection builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2,<7",
  "XlsxWriter>=3.2,<4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.6,<1"
]

[project.scripts]
api-evidence-mapper = "api_evidence_mapper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
